# statystyka

./: README.md  pyproject.toml  regresja.ipynb  regresja.py
