[project]
name = "statystyka"
version = "0.1.0"
description = "model regresji liniowej wielorakiej przewidujący ciśnienie krwi na podstawie zanonimizowanych  wskaźników zdrowia i stylu zycia pacjentów."
authors = [
    {name = "Konrad Springer",email = "kossarpl@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = false

[tool.poetry]
package-mode = false
